--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="title">Etch A Sketch</h1>
+    </header>
+    <main class="container">
+        <div class="settings">
+            <input id="colorPicker" type="color" value="#333333">
+            <button id="colorBtn">Color mode</button>
+            <button id="randomColor">Random Color</button>
+            <button id="eraserBtn">Eraser</button>
+            <button id="clearBtn">Clear</button>
+            <div id="sizeValue" class="size-value">16 x 16</div>
+            <input id="sizeSlider" type="range" value="16" min="1" max="64"/>
+        </div>
+        <div id="grid" class="grid"></div>
+    </main>
 </body>
 </html>
