--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
         </div>
         <div id="grid" class="grid"></div>
     </main>
+    <footer>
+        <p>Copyright © 
+            <script>
+            document.write(new Date().getFullYear())
+            </script>
+          Gooey96
+        </p>
+    </footer>
 </body>
 </html>
