--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
-    <div class="header">Etch A Sketch</div>
+    <div class="header">Etch-a-sketch</div>
     <div class="container">
         <div class="settings">
             <input id="colorPicker" type="color" value="#333333">
