--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Odin Project: Etch-a-Sketch</title>
 </head>
 <body>
-  
+  <div class="header">Etch-A-Sketch</div>
+  <div class="container">
+    <div class="buttons">
+      <button></button>
+    </div>
+    <div class="grid"></div>
+  </div>
+  <div class="footer">Copyright © <script>
+    document.write(new Date().getFullYear())
+  </script> Gooey96</div>
 </body>
 </html>
