Change two class name

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div class="header">Etch-A-Sketch</div>
-  <div class="container">
-    <div class="grid"></div>
+  <div class="main">
+    <div class="container"></div>
   </div>
   <div class="footer">Copyright © <script>
     document.write(new Date().getFullYear())
