--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <title>Odin Project: Etch-a-Sketch</title>
 </head>
 <body>
-  <div class="header">Etch-A-Sketch</div>
+  <div class="header">Etch-A-Sketch 
+    <br>
+    <div class="para">Have Fun Sketching</div>
+  </div>
   <div class="main">
     <div class="container"></div>
   </div>
