--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <div class="para">Have Fun Sketching</div>
   </div>
   <div class="main">
+    <div class="container2">
+      <div class="ctrl">Controls</div>
+      <button class="btnGrd">Grids</button>
+      <button class="eraser">Eraser</button>
+      <button class="reset">Reset</button>
+    </div>
     <div class="container"></div>
   </div>
   <div class="footer">Copyright © <script>
