Add div with class name gridSize

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div class="main">
     <div class="container2">
       <div class="ctrl">Controls</div>
+      <div class="gridSize">16 x 16</div>
       <button class="btnGrd">Grids</button>
       <button class="eraser">Eraser</button>
       <button class="reset">Reset</button>
