Add class name buttons

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="container2">
       <div class="ctrl">Controls</div>
       <div class="gridSize">16 x 16</div>
-      <button class="btnGrd">Grids</button>
-      <button class="eraser">Eraser</button>
-      <button class="reset">Reset</button>
+      <button class="btnGrd buttons">Grids</button>
+      <button class="eraser buttons">Eraser</button>
+      <button class="reset buttons">Reset</button>
     </div>
     <div class="container"></div>
   </div>
