--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       <button class="reset buttons">Reset</button>
     </div>
     <div class="container"></div>
+    <div class="container3">
+      <div class="md">Modes</div>
+      <input type="color" value="#090a20">
+      <button class="colors">Colors</button>
+      <button class="rainbow">Rainbow</button>
+    </div>
   </div>
   <div class="footer">Copyright © <script>
     document.write(new Date().getFullYear())
