--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="para">Have Fun Sketching</div>
   </div>
   <div class="main">
-    <div class="container2">
+    <div class="container2 A">
       <div class="ctrl">Controls</div>
       <div class="gridSize">16 x 16</div>
       <button class="btnGrd buttons">Grids</button>
@@ -22,11 +22,11 @@
       <button class="reset buttons">Reset</button>
     </div>
     <div class="container"></div>
-    <div class="container3">
+    <div class="container2 B">
       <div class="md">Modes</div>
-      <input type="color" value="#090a20">
-      <button class="colors">Colors</button>
-      <button class="rainbow">Rainbow</button>
+      <input class="input" type="color" value="#090a20">
+      <button class="colors buttons">Colors</button>
+      <button class="rainbow buttons">Rainbow</button>
     </div>
   </div>
   <div class="footer">Copyright © <script>
