Change name from colors to opacity

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container2 B">
       <div class="md">Modes</div>
       <input class="input" type="color" value="#090a20">
-      <button class="colors buttons">Colors</button>
+      <button class="opac buttons">Opacity</button>
       <button class="rainbow buttons">Rainbow</button>
     </div>
   </div>
